implements the return of an error message with the s3 retry